@@ -4,6 +4,8 @@
 	strlcpy to match the new API (which was updated to match the
 	Solaris strlcpy API).
 
+	* gmime-param.c (g_string_append_len): Same.
+
 	* strlib.c (strlcpy): Changed to behave the same as the Solaris
 	strlcpy function.
 	(strlcat): Changed to behave the same as the Solaris strlcat
